  If changing the owner or group of a directory fails, chown and chgrp now
  continue to process the hierarchy below it with the -R option.
* cp: The -H, -L, and -P options from POSIX.1-2001 have been added.
* du, find: The -H and -L options from POSIX.1-2001 have been added.
* ls: The -H option from POSIX.1-2001 has been added.
* pax: The -H option from POSIX.1-2001 has been added; pax does not follow
  symbolic links on the command line anymore unless this option is present.
  If pax detects a symbolic link loop, it now terminates for alignment with
  POSIX.1-2001.
* tr: The -C option from POSIX.1-2001 has been added.
* dd: With 'conv=unblock', the last block was not converted.
* grep: The content of a file that consisted only of a single byte other than
  a newline was never matched.
* csplit, ed, expr, grep, nl, pax, pg, sed: The POSIX versions no longer
  accept reverted ranges like '[b-a]' in regular expressions.
* touch: If one of -a or -m but no time specification was given, both
  access and modification time were set to the current time.
* sed: The length of labels is limited to 8 characters instead of 7 bytes now.
* cut: If the -s option was specified but the first field was included in the
  list to the -f option, lines without the delimiter character were printed.
* cut: The -b, -c, and -f options did not accept the tabulator character as
  a field specification separator.
* paste: If standard input was used as input multiple times, a delimiter
  was printed after the last line of regular output.
* paste: If an inaccessible file is given with the -s option, the utility no
  longer exits but continues with the next file.
* od: When reading from standard input with the -N option, the file pointer
  is now left after the last byte read.
* xargs: The combination of the -n and -x options did not work properly.
* xargs: Exit codes were aligned with POSIX.
* ed: If no new text is given for a 'c' command, the current line is now